# GLSCxGears

./: CMakeLists.txt  Compile&Run.bat  Compile&Run.sh  Compile_Run.bat  Compile_Run.sh  README.md
Application/: OPENGL_SC
Application/include/glad/: glad.h
Application/src/: glad.c  main.cpp
GearsSC/: Gears_SC
GearsSC/src/: main.cpp
ShaderCompiler/: ShaderCompiler
ShaderCompiler/include/glad/: glad.h
ShaderCompiler/src/: glad.c  main.cpp
